# Peperobot_cpp

./: CMakeLists.txt  MakeFile  README.md  makefile
header/bitboard/: attacks.h  bb_utils.h  constants.h  init.h  magic_numbers.h  magics.h  random.h  squares.h
header/board/: Board.h  board.h  castling.h  fen.h  pieces.h
header/engine/: search.h  search_constants.h  tt.h
header/engine/evaluate/: evaluate.h  mvv_lva.h  score_move.h  see.h
header/engine/nnue/: embedded_nnue.h  nnue_adapter.h  nnue_dirty.h
header/engine/uci/: bench.h  bench_fens.h  time_control.h  uci_manager.h  uci_parse.h
header/hash/: zobrist.h
header/movegen/: move.h  movegen.h  perft.h
header/time/: time_utils.h
include/: main.cpp
include/bitboard/: attacks.cpp  init.cpp  magic_numbers.cpp  magics.cpp  random.cpp
include/board/: Board.cpp  board.cpp  castling.cpp  fen.cpp
include/engine/: search.cpp  tt.cpp
include/engine/evaluate/: evaluate.cpp  score_move.cpp  see.cpp
include/engine/uci/: bench.cpp  time_control.cpp  uci_manager.cpp  uci_parse.cpp
include/hash/: zobrist.cpp
include/movegen/: move.cpp  movegen.cpp
include/time/: time_utils.cpp
stockfish/nnue/: nnue_accumulator.h  nnue_architecture.h  nnue_common.h
stockfish/nnue/layers/: affine_transform.h  affine_transform_sparse_input.h
